--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         toolchain: stable
 
     - name: Build
-      run: cargo build --verbose
+      run: make build 
 
     - name: Lint with Clippy
       run: make lint
