--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         toolchain: stable
 
+    - name: Rust Version
+      run: make rust-version
+
     - name: Build
       run: make build 
 
