--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+lexer = { path = "../lexer" }
+ast = { path = "../ast" }
+miette = { version = "7.2.0", features = ["fancy"] }
+thiserror = "1.0.63"
