refactor(lexer): Change Token struct to use text span

--- a/crates/lexer/Cargo.toml
+++ b/crates/lexer/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+text = { path = "../text" }
 miette = { version = "7.2.0", features = ["fancy"] }
 thiserror = "1.0.63"
