--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/ast",
     "crates/lexer",
     "crates/parser",
+    "crates/text",
     ".",
 ]
 
@@ -20,6 +21,7 @@ path = "src/main.rs"
 lexer = { path = "crates/lexer" }
 parser = { path = "crates/parser" }
 ast = { path = "crates/ast" }
+text = { path = "crates/text" }
 miette = { version = "7.2.0", features = ["fancy"] }
 bytes = "1.3.0"
 clap = { version = "4.5.16", features = ["derive"] }
