--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "crates/ast",
+    "crates/diagnostics",
     "crates/lexer",
     "crates/parser",
     "crates/text",
@@ -18,14 +19,16 @@ name = "vox-lang"
 path = "src/main.rs"
 
 [dependencies]
+ast = { path = "crates/ast" }
+diagnostics = { path = "crates/diagnostics" }
 lexer = { path = "crates/lexer" }
 parser = { path = "crates/parser" }
-ast = { path = "crates/ast" }
 text = { path = "crates/text" }
 miette = { version = "7.2.0", features = ["fancy"] }
 bytes = "1.3.0"
 clap = { version = "4.5.16", features = ["derive"] }
 thiserror = "1.0.63"
+termion = "4.0.3"
 
 [dev-dependencies]
 cargo-husky = { version = "1", default-features = false }
