--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lexer = { path = "../lexer" }
 ast = { path = "../ast" }
+diagnostics = { path = "../diagnostics" }
+lexer = { path = "../lexer" }
 miette = { version = "7.2.0", features = ["fancy"] }
 thiserror = "1.0.63"
