feat: Enhance Parser, AST, Diagnostics, and Text Crates for Improved Language Processing
* feat: add lexer

* style: fix lexer fmt

* docs(wip): add readme

* test(lexer): add tests for token and match pattern

* test(lexer): allow clippy while let iterator

* test(parser): start simple parser with ast

* test(lexer): add eof token

* test(parser): parser primary and binary expressions - numeber literals

* test(parser): parser primary and binary expressions - numeber literals

* test(parser): add parenthesized expressions

* test(parser): add parenthesized expressions

* refactor(lexer): Change Token struct to use text span

* refactor(lexer): Change Token struct to use text span

* refactor(lexer): Change Token struct to use text span

* feat(diagnostics): Add diagnostics crate

* feat(diagnostics): Add diagnostics crate

* feat(diagnostics): Add diagnostics crate

* refactor(lexer): handle unrecognized token as a bad token instead an error

* style(clippy): fix lint warnings

---------

Co-authored-by: Fabio Luiz Meireles Caffarello <fabio.caffarello@gamil.com>
Co-authored-by: Fabio Caffarello <fabiocaffarello@Fabios-MacBook-Pro.local>

--- a/crates/diagnostics/Cargo.toml
+++ b/crates/diagnostics/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "lexer"
+name = "diagnostics"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 text = { path = "../text" }
-miette = { version = "7.2.0", features = ["fancy"] }
-thiserror = "1.0.63"
+lexer = { path = "../lexer" }
+termion = "4.0.3"
