feat: create id for stmt and expr

--- a/crates/ast/Cargo.toml
+++ b/crates/ast/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 diagnostics = { path = "../diagnostics" }
 lexer = { path = "../lexer" }
 text = { path = "../text" }
+support = { path = "../support" }
 termion = "4.0.3"
