--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 ast = { path = "../ast" }
 diagnostics = { path = "../diagnostics" }
 lexer = { path = "../lexer" }
+support = { path = "../support" }
 miette = { version = "7.2.0", features = ["fancy"] }
 thiserror = "1.0.63"
