--- a/crates/ast/Cargo.toml
+++ b/crates/ast/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 diagnostics = { path = "../diagnostics" }
 lexer = { path = "../lexer" }
-text = { path = "../text" }
 support = { path = "../support" }
+text = { path = "../text" }
+typings = { path = "../typings" }
 termion = "4.0.3"
