--- a/crates/diagnostics/Cargo.toml
+++ b/crates/diagnostics/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 text = { path = "../text" }
 lexer = { path = "../lexer" }
+typings = { path = "../typings" }
 termion = "4.0.3"
