--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,11 +28,12 @@ compiler = { path = "crates/compiler" }
 diagnostics = { path = "crates/diagnostics" }
 lexer = { path = "crates/lexer" }
 parser = { path = "crates/parser" }
+typings = { path = "crates/typings" }
 text = { path = "crates/text" }
 miette = { version = "7.2.0", features = ["fancy"] }
 bytes = "1.3.0"
 clap = { version = "4.5.16", features = ["derive"] }
-thiserror = "1.0.66"
+thiserror = "2.0.0"
 termion = "4.0.3"
 
 [dev-dependencies]
