--- a/crates/support/Cargo.toml
+++ b/crates/support/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+diagnostics = { path = "../diagnostics" }
+lexer = { path = "../lexer" }
+typings = { path = "../typings" }
