--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,17 @@
 [workspace]
 resolver = "2"
 members = [
-    "crates/ast",
-    "crates/compiler",
-    "crates/diagnostics",
-    "crates/lexer",
-    "crates/index",
-    "crates/parser",
-    "crates/support",
-    "crates/text",
-    "crates/typings",
+    "crates/utils/counter",
+    "crates/utils/errors",
+    "crates/utils/index",
+    "crates/utils/text",
+    "crates/frontend/ast",
+    "crates/frontend/diagnostics",
+    "crates/frontend/lexer",
+    "crates/frontend/parser",
+    "crates/frontend/resolver",
+    "crates/frontend/token",
+    "crates/frontend/typings",
     ".",
 ]
 
@@ -23,13 +25,17 @@ name = "vox-lang"
 path = "src/main.rs"
 
 [dependencies]
-ast = { path = "crates/ast" }
-compiler = { path = "crates/compiler" }
-diagnostics = { path = "crates/diagnostics" }
-lexer = { path = "crates/lexer" }
-parser = { path = "crates/parser" }
-typings = { path = "crates/typings" }
-text = { path = "crates/text" }
+counter = { path = "crates/utils/counter" }
+errors = { path = "crates/utils/errors" }
+text = { path = "crates/utils/text" }
+index = { path = "crates/utils/index" }
+ast = { path = "crates/frontend/ast" }
+diagnostics = { path = "crates/frontend/diagnostics" }
+lexer = { path = "crates/frontend/lexer" }
+parser = { path = "crates/frontend/parser" }
+resolver = { path = "crates/frontend/resolver" }
+token = { path = "crates/frontend/token" }
+typings = { path = "crates/frontend/typings" }
 miette = { version = "7.2.0", features = ["fancy"] }
 bytes = "1.3.0"
 clap = { version = "4.5.16", features = ["derive"] }
